--- a/DataAnnotationsValidator/DataAnnotationsValidator/DataAnnotationsValidator.csproj
+++ b/DataAnnotationsValidator/DataAnnotationsValidator/DataAnnotationsValidator.csproj
@@ -1,58 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\NuGet.Build.Packaging.0.1.248\build\NuGet.Build.Packaging.props" Condition="Exists('..\packages\NuGet.Build.Packaging.0.1.248\build\NuGet.Build.Packaging.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{218B0C2C-19AD-4C7B-B583-840FF755A76D}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DataAnnotationsValidator</RootNamespace>
+    <TargetFrameworks>netstandard2.0;net47</TargetFrameworks>
     <AssemblyName>DataAnnotationsValidator</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <PackOnBuild>true</PackOnBuild>
-    <PackageId>DataAnnotationsValidator</PackageId>
-    <PackageVersion>2.1.0.0</PackageVersion>
-    <Authors>Mike Reust</Authors>
-    <NeutralLanguage>en-US</NeutralLanguage>
-    <PackageLicenseUrl>https://github.com/reustmd/DataAnnotationsValidatorRecursive/blob/master/License.md</PackageLicenseUrl>
-    <Owners>Mike Reust</Owners>
-    <PackageProjectUrl>https://github.com/reustmd/DataAnnotationsValidatorRecursive</PackageProjectUrl>
-    <PackageTags>DataAnnotation validation validator</PackageTags>
-    <Title>DataAnnotationsValidator</Title>
-    <Description>The helper will recursively traverse your object graph and invoke validation against DataAnnotations. This originated from following Stackoverflow answer: http://stackoverflow.com/a/8090614/605586</Description>
-    <TargetFrameworkProfile />
+    <RootNamespace>DataAnnotationsValidator</RootNamespace>
+    <PackageLicenseUrl>https://github.com/ovation22/DataAnnotationsValidatorRecursive/blob/master/License.md</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/ovation22/DataAnnotationsValidatorRecursive</PackageProjectUrl>
+    <Description>Forked from DataAnnotationsValidator by Mike Reust. Allows scanning object graph and validates every object using .NET standatd System.ComponentModel.DataAnnotations.Validator</Description>
+    <Copyright>Copyright © 2018</Copyright>
+    <PackageTags>DataAnnotation validation validator .netcore</PackageTags>
+    <AssemblyVersion>1.0.3.0</AssemblyVersion>
+    <FileVersion>1.0.3.0</FileVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/ovation22/DataAnnotationsValidatorRecursive</RepositoryUrl>
+    <Version>1.0.3</Version>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>..\DataAnnotationsValidatorRecursive.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
+  <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.3.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'=='net47'">
+   <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -61,29 +27,4 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="DataAnnotationsValidator.cs" />
-    <Compile Include="IDataAnnotationsValidator.cs" />
-    <Compile Include="ObjectExtensions.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SkipRecursiveValidation.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\DataAnnotationsValidatorRecursive.snk">
-      <Link>DataAnnotationsValidatorRecursive.snk</Link>
-    </None>
-    <None Include="DataAnnotationsValidator.nuspec">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
-  <Import Project="..\packages\NuGet.Build.Packaging.0.1.248\build\NuGet.Build.Packaging.targets" Condition="Exists('..\packages\NuGet.Build.Packaging.0.1.248\build\NuGet.Build.Packaging.targets')" />
 </Project>
